--- a/Keyboard/Keyboard.storyboard
+++ b/Keyboard/Keyboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kAM-7W-Ok9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kAM-7W-Ok9">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,7 +8,7 @@
         <!--Keyboard View Controller-->
         <scene sceneID="ug2-g9-QDQ">
             <objects>
-                <viewController id="kAM-7W-Ok9" customClass="KeyboardViewController" customModule="DongerBoard" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="kAM-7W-Ok9" customClass="KeyboardViewController" customModule="Keyboard" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="TIO-Zv-cDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="oYK-TF-Dqx"/>
